src/gzotpa/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package gzotpa.parser;
import gzotpa.ast.*;
import gzotpa.entity.*;
import gzotpa.type.*;
import gzotpa.exception.*;
import java.io.*;
import java.util.List;
import java.util.ArrayList;
import java.util.Set;
import java.util.HashSet;


public class Parser implements ParserConstants {
        private String sourceName;
        public Parser(Reader s, String name) {
                this(s);
                this.sourceName = name;
        }
        public AST parse() throws SyntaxException {
        try {
            return compilation_unit();
        }
        catch (TokenMgrError err) {
            throw new SyntaxException(err.getMessage());
        }
        catch (ParseException ex) {
            throw new SyntaxException(ex.getMessage());
        }
        catch (LookaheadSuccess err) {
            throw new SyntaxException("syntax error");
        }
    }
        static public AST parseFile(File file)
                                                                throws SyntaxException, FileException {
                return newFileParser(file).parse();
        }
        static final public String SOURCE_ENCODING = "UTF-8";
        static public Parser newFileParser(File file)
                                                                                throws FileException {
                try {
                        BufferedReader r =
                                new BufferedReader(
                                        new InputStreamReader(new FileInputStream(file),
                                                SOURCE_ENCODING));
                        return new Parser(r, file.getPath());
                }
                catch (FileNotFoundException ex) {
                        throw new FileException(ex.getMessage());
                }
                catch (UnsupportedEncodingException ex) {
                        throw new Error("UTF-8 is not supported??: " + ex.getMessage());
                }
        }
        protected Location location(Token t) {
        return new Location(sourceName, t);
    }
    private char unescapeOctal(String s) throws ParseException {
        int x = Integer.parseInt(s, 8);
        if (x > 255) throw new ParseException("Gzotpa! Octal ascii exceeds 255!");
        return (char)x;
    }
    private char unescapeSeq(char c) throws ParseException {
        switch (c) {
        case '"': return '"';
        case '\'': return '\'';
        case 'n': return '\n';
        default:
            throw new ParseException("Gzotpa! Unknown escape sequence: \"\\" + c + "!");
        }
    }
    private String stringValue(String _image) throws ParseException {
        int pos = 0;
        int idx;
        StringBuffer buf = new StringBuffer();
        String image = _image.substring(1, _image.length() - 1);

        while ((idx = image.indexOf("\\", pos)) >= 0) {
            buf.append(image.substring(pos, idx));
            if (image.length() >= idx + 4
                    && Character.isDigit(image.charAt(idx+1))
                    && Character.isDigit(image.charAt(idx+2))
                    && Character.isDigit(image.charAt(idx+3))) {
                buf.append(unescapeOctal(image.substring(idx+1, idx+4)));
                pos = idx + 4;
            }
            else {
                buf.append(unescapeSeq(image.charAt(idx+1)));
                pos = idx + 2;
            }
        }
        if (pos < image.length()) {
            buf.append(image.substring(pos, image.length()));
        }
        return buf.toString();
    }
    private long integerValue(String image) {
        String s = image.replaceFirst("[UL]+", "");
        if (s.startsWith("0x") || s.startsWith("0X")) {
            return Long.parseLong(s.substring(2), 16);
        }
        else if (s.startsWith("0") && !s.equals("0")) {
            return Long.parseLong(s.substring(1), 8);
        }
        else {
            return Long.parseLong(s, 10);
        }
    }

  final public Params params() throws ParseException {
    trace_call("params");
    try {
    Token t;
    Params params;
      if (jj_2_1(2147483647)) {
        t = jj_consume_token(VOID);
            {if (true) return new Params(location(t), new ArrayList<Parameter>());}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case INT:
          params = fixedparams();
            {if (true) return params;}
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("params");
    }
  }

  final public Params fixedparams() throws ParseException {
    trace_call("fixedparams");
    try {
    List<Parameter> params = new ArrayList<Parameter>();
    Parameter param, param1;
      param1 = param();
                     params.add(param1);
      label_1:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(25);
        param = param();
                                       params.add(param);
      }
            {if (true) return new Params(param1.location(), params);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("fixedparams");
    }
  }

  final public Parameter param() throws ParseException {
    trace_call("param");
    try {
    TypeNode t;
    String n;
      t = type();
      n = name();
                        {if (true) return new Parameter(t, n);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("param");
    }
  }

  final public BlockNode block() throws ParseException {
    trace_call("block");
    try {
    Token t;
    List<DefinedVariable> vars;
    List<StmtNode> stmts;
      t = jj_consume_token(26);
      vars = defvar_list();
      stmts = stmts();
      jj_consume_token(27);
            {if (true) return new BlockNode(location(t), vars, stmts);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("block");
    }
  }

  final public TypeNode type() throws ParseException {
    trace_call("type");
    try {
  TypeRef ref;
      ref = typeref();
                    {if (true) return new TypeNode(ref);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("type");
    }
  }

  final public TypeRef typeref() throws ParseException {
    trace_call("typeref");
    try {
    TypeRef ref;
      ref = typeref_base();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 28:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(28);
        jj_consume_token(29);
            ref = new ArrayTypeRef(ref);
      }
            {if (true) return ref;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("typeref");
    }
  }

  final public TypeRef typeref_base() throws ParseException {
    trace_call("typeref_base");
    try {
    Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        t = jj_consume_token(VOID);
                          {if (true) return new VoidTypeRef(location(t));}
        break;
      case INT:
        t = jj_consume_token(INT);
                          {if (true) return IntegerTypeRef.intRef(location(t));}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("typeref_base");
    }
  }

  final public List<StmtNode> stmts() throws ParseException {
    trace_call("stmts");
    try {
    List<StmtNode> ss = new ArrayList<StmtNode>();
    StmtNode s;
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case FOR:
        case RETURN:
        case BREAK:
        case CONTINUE:
        case IDENTIFIER:
        case INTEGER:
        case STRING:
        case 26:
        case 30:
        case 31:
        case 56:
        case 57:
        case 61:
        case 62:
        case 63:
        case 64:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        s = stmt();
                if (s != null) ss.add(s);
      }
            {if (true) return ss;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("stmts");
    }
  }

  final public StmtNode stmt() throws ParseException {
    trace_call("stmt");
    try {
    StmtNode n = null;
    ExprNode e = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
        jj_consume_token(30);
        break;
      case IDENTIFIER:
      case INTEGER:
      case STRING:
      case 31:
      case 56:
      case 57:
      case 61:
      case 62:
      case 63:
      case 64:
        e = expr();
        jj_consume_token(30);
                     n = new ExprStmtNode(e.location(), e);
        break;
      case 26:
        n = block();
        break;
      case IF:
        n = if_stmt();
        break;
      case WHILE:
        n = while_stmt();
        break;
      case FOR:
        n = for_stmt();
        break;
      case BREAK:
        n = break_stmt();
        break;
      case CONTINUE:
        n = continue_stmt();
        break;
      case RETURN:
        n = return_stmt();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
            {if (true) return n;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("stmt");
    }
  }

  final public IfNode if_stmt() throws ParseException {
    trace_call("if_stmt");
    try {
    Token t;
    ExprNode cond;
    StmtNode thenBody, elseBody = null;
      t = jj_consume_token(IF);
      jj_consume_token(31);
      cond = expr();
      jj_consume_token(24);
      thenBody = stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        elseBody = stmt();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
            {if (true) return new IfNode(location(t), cond, thenBody, elseBody);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("if_stmt");
    }
  }

  final public WhileNode while_stmt() throws ParseException {
    trace_call("while_stmt");
    try {
    Token t;
    ExprNode cond;
    StmtNode body;
      t = jj_consume_token(WHILE);
      jj_consume_token(31);
      cond = expr();
      jj_consume_token(24);
      body = stmt();
            {if (true) return new WhileNode(location(t), cond, body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("while_stmt");
    }
  }

  final public ForNode for_stmt() throws ParseException {
    trace_call("for_stmt");
    try {
    Token t;
    ExprNode init = null, cond = null, incr = null;
    StmtNode body;
      t = jj_consume_token(FOR);
      jj_consume_token(31);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case INTEGER:
      case STRING:
      case 31:
      case 56:
      case 57:
      case 61:
      case 62:
      case 63:
      case 64:
        init = expr();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(30);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case INTEGER:
      case STRING:
      case 31:
      case 56:
      case 57:
      case 61:
      case 62:
      case 63:
      case 64:
        cond = expr();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(30);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case INTEGER:
      case STRING:
      case 31:
      case 56:
      case 57:
      case 61:
      case 62:
      case 63:
      case 64:
        incr = expr();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(24);
      body = stmt();
            {if (true) return new ForNode(location(t), init, cond, incr, body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("for_stmt");
    }
  }

  final public BreakNode break_stmt() throws ParseException {
    trace_call("break_stmt");
    try {
  Token t;
      t = jj_consume_token(BREAK);
      jj_consume_token(30);
                    {if (true) return new BreakNode(location(t));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("break_stmt");
    }
  }

  final public ContinueNode continue_stmt() throws ParseException {
    trace_call("continue_stmt");
    try {
  Token t;
      t = jj_consume_token(CONTINUE);
      jj_consume_token(30);
                       {if (true) return new ContinueNode(location(t));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("continue_stmt");
    }
  }

  final public ReturnNode return_stmt() throws ParseException {
    trace_call("return_stmt");
    try {
    Token t;
    ExprNode expr;
      if (jj_2_3(2)) {
        t = jj_consume_token(RETURN);
        jj_consume_token(30);
                                    {if (true) return new ReturnNode(location(t), null);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
          t = jj_consume_token(RETURN);
          expr = expr();
          jj_consume_token(30);
                                    {if (true) return new ReturnNode(location(t), expr);}
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("return_stmt");
    }
  }

  final public ExprNode expr() throws ParseException {
    trace_call("expr");
    try {
    ExprNode lhs, rhs, expr;
    String op;
      if (jj_2_4(2147483647)) {
        lhs = term();
        jj_consume_token(32);
        rhs = expr();
            {if (true) return new AssignNode(lhs, rhs);}
      } else if (jj_2_5(2147483647)) {
        lhs = term();
        op = opassign_op();
        rhs = expr();
            {if (true) return new OpAssignNode(lhs, op, rhs);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
        case INTEGER:
        case STRING:
        case 31:
        case 56:
        case 57:
        case 61:
        case 62:
        case 63:
        case 64:
          expr = expr9();
            {if (true) return expr;}
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr");
    }
  }

  final public String opassign_op() throws ParseException {
    trace_call("opassign_op");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
        jj_consume_token(33);
              {if (true) return "+";}
        break;
      case 34:
        jj_consume_token(34);
              {if (true) return "-";}
        break;
      case 35:
        jj_consume_token(35);
              {if (true) return "*";}
        break;
      case 36:
        jj_consume_token(36);
              {if (true) return "/";}
        break;
      case 37:
        jj_consume_token(37);
              {if (true) return "%";}
        break;
      case 38:
        jj_consume_token(38);
              {if (true) return "&";}
        break;
      case 39:
        jj_consume_token(39);
              {if (true) return "|";}
        break;
      case 40:
        jj_consume_token(40);
              {if (true) return "^";}
        break;
      case 41:
        jj_consume_token(41);
              {if (true) return "<<";}
        break;
      case 42:
        jj_consume_token(42);
              {if (true) return ">>";}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("opassign_op");
    }
  }

  final public ExprNode expr9() throws ParseException {
    trace_call("expr9");
    try {
  ExprNode l, r;
      l = expr8();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 43:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_4;
        }
        jj_consume_token(43);
        r = expr8();
                                l = new LogicalOrNode(l, r);
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr9");
    }
  }

  final public ExprNode expr8() throws ParseException {
    trace_call("expr8");
    try {
  ExprNode l, r;
      l = expr7();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 44:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(44);
        r = expr7();
                                l = new LogicalAndNode(l, r);
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr8");
    }
  }

  final public ExprNode expr7() throws ParseException {
    trace_call("expr7");
    try {
  ExprNode l, r;
      l = expr6();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 45:
        case 46:
        case 47:
        case 48:
        case 49:
        case 50:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 45:
          jj_consume_token(45);
          r = expr6();
                                 l = new BinaryOpNode(l, ">", r);
          break;
        case 46:
          jj_consume_token(46);
          r = expr6();
                                 l = new BinaryOpNode(l, "<", r);
          break;
        case 47:
          jj_consume_token(47);
          r = expr6();
                                 l = new BinaryOpNode(l, ">=", r);
          break;
        case 48:
          jj_consume_token(48);
          r = expr6();
                                 l = new BinaryOpNode(l, "<=", r);
          break;
        case 49:
          jj_consume_token(49);
          r = expr6();
                                 l = new BinaryOpNode(l, "==", r);
          break;
        case 50:
          jj_consume_token(50);
          r = expr6();
                                 l = new BinaryOpNode(l, "!=", r);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr7");
    }
  }

  final public ExprNode expr6() throws ParseException {
    trace_call("expr6");
    try {
  ExprNode l, r;
      l = expr5();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 51:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        jj_consume_token(51);
        r = expr5();
                               l = new BinaryOpNode(l, "|", r);
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr6");
    }
  }

  final public ExprNode expr5() throws ParseException {
    trace_call("expr5");
    try {
  ExprNode l, r;
      l = expr4();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 52:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_8;
        }
        jj_consume_token(52);
        r = expr4();
                               l = new BinaryOpNode(l, "^", r);
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr5");
    }
  }

  final public ExprNode expr4() throws ParseException {
    trace_call("expr4");
    try {
  ExprNode l, r;
      l = expr3();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 53:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_9;
        }
        jj_consume_token(53);
        r = expr3();
                               l = new BinaryOpNode(l, "&", r);
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr4");
    }
  }

  final public ExprNode expr3() throws ParseException {
    trace_call("expr3");
    try {
  ExprNode l, r;
      l = expr2();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
        case 55:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_10;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
          jj_consume_token(54);
          r = expr2();
                                 l = new BinaryOpNode(l, ">>", r);
          break;
        case 55:
          jj_consume_token(55);
          r = expr2();
                                 l = new BinaryOpNode(l, "<<", r);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
            {if (true) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr3");
    }
  }
